# fastapi-app

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/fastapi_app/: __init__.py  bootstrap.py  paginator.py  response.py
src/fastapi_app/dependencies/: __init__.py  api_key.py
src/fastapi_app/exception_handlers/: __init__.py  exceptions.py  models.py  registry.py
src/fastapi_app/idempotency/: middleware.py
src/fastapi_app/kafka/: __init__.py  bootstrap.py  consumer.py  dependencies.py
src/fastapi_app/logging/: __init__.py  formatters.py  loggers.py  middleware.py  models.py
src/fastapi_app/telemetry/: __init__.py  sentry.py  telemetry.py
tests/: conftest.py
tests/integration/: test_opentelemtry.py
tests/mock/: idempotency_mock_api.py
tests/unit/: test_paginator.py
tests/unit/test_middlewares/: test_authorization.py  test_idempotency.py
